adjust size of logo & coming soon to better match orig. adjust spacing of them as well

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -10,6 +10,12 @@
   }
 }
 
+@mixin uhd-query {
+  @media screen and (min-width: 2000px) {
+    @content;
+  }
+}
+
 @mixin font($size, $height, $weight) {
   font-size: $size;
   line-height: $height;
