--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@ ul {
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.6rem;
 }
 @media screen and (min-width: 768px) {
   .available__content-wrapper {
@@ -63,6 +63,10 @@ ul {
   font-size: 0.75rem;
 }
 
+.splash {
+  /* LOGO */
+  /* COMING SOON */
+}
 .splash__wrapper {
   flex: 1 1 auto;
   background-color: #711AA5;
@@ -70,13 +74,35 @@ ul {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
+  position: relative;
 }
 .splash__content {
+  position: absolute;
+  top: -1.8rem;
   height: 100%;
+  width: 100%;
   display: flex;
   flex-flow: column;
   justify-content: space-between;
   align-items: center;
-  /* LOGO & COMING SOON */
-  /* BUBBLE TEXT & SOCIAL */
+  /* Container for logo & coming soon */
+  /* Container for Bubble & Social */
+}
+.splash__content-upper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  gap: 0.5rem;
+}
+.splash__logo {
+  width: 13.125rem;
+}
+@media screen and (min-width: 1280px) {
+  .splash__logo {
+    width: 13.125rem;
+  }
+}
+.splash__comingsoon {
+  width: 29vw;
+  min-width: 20rem;
 }/*# sourceMappingURL=styles.css.map */
