--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -53,7 +53,7 @@ ul {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.6rem;
 
     @include tablet-query {
       justify-content: flex-end;
@@ -79,24 +79,47 @@ ul {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
+
+    position: relative; // sets base when abs positioning content
   }
 
   &__content {
-    
+    position: absolute; // to allow positioning of logo above
+    top: -1.8rem;
+
     height: 100%;
+    width: 100%;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
     align-items: center;
 
-    /* LOGO & COMING SOON */
+    /* Container for logo & coming soon */
     &-upper {
-
+      display: flex;
+      flex-flow: column nowrap;
+      align-items: center;
+      gap: 0.5rem;
     }
 
-    /* BUBBLE TEXT & SOCIAL */
+    /* Container for Bubble & Social */
     &-lower {
 
+    }
+  }
+  /* LOGO */
+  &__logo {
+    width: 13.125rem;
+    @include desktop-query {
+      width: 13.125rem;
+    }
+  }
+  /* COMING SOON */
+  &__comingsoon {
+    width: 29vw; // 27.25rem;
+    min-width: 20rem;
+    @include uhd-query {
+    //  width: 49.1875rem;
     }
   }
 }
