style lower content area including bubble and social, add separate bg image for mobile

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -10,14 +10,20 @@
   }
 }
 
-@mixin uhd-query {
-  @media screen and (min-width: 2000px) {
+@mixin short-height-query {
+  @media screen and (max-height: 500px) {
     @content;
   }
 }
 
-@mixin font($size, $height, $weight) {
-  font-size: $size;
-  line-height: $height;
-  font-weight: $weight;
+// @mixin font($size, $height, $weight) {
+//   font-size: $size;
+//   line-height: $height;
+//   font-weight: $weight;
+// }
+
+@mixin font-standard {
+  color: white;
+  font-weight: bold;
+  font-size: .75rem;
 }
