add alternate narrow bg image for testing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,6 +84,13 @@ ul {
     background-position: top center;
   }
 }
+@media screen and (max-height: 500px) {
+  .splash__wrapper {
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top center;
+  }
+}
 .splash__content {
   position: absolute;
   top: -1.8rem;
